# healthcare-claims-ai-governance

./: .gitignore  README.md  create_repo.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: synthetic_baseline.yaml
data/synthetic/: synthetic_claims.csv
docs/: DEPLOYMENT_PATHWAY.md  GOVERNANCE.md  MONITORING.md  QUICK_START.md  RISK_TIERS.md
results/tables/: bootstrap_confidence_intervals.csv  calibration_diagnostics.csv  calibration_metrics.csv  governance_triggers.csv  reliability_bins_platt.csv  risk_coverage_curve.csv  risk_tier_escalation.csv  subgroup_calibration.csv  subgroup_diagnostics.csv  test_predictions.csv
scripts/: generate_synthetic_claims.py  monitor_drift.py  reproduce_all.py  run_experiment.py  verify_outputs.py
src/claims_calibration/: __init__.py  data.py  pipeline.py  plotting.py  thresholds.py
src/claims_calibration/calibration/: __init__.py  methods.py
src/claims_calibration/evaluation/: __init__.py  metrics.py
src/claims_calibration/governance/: __init__.py  monitoring.py
tests/: test_calibration.py  test_metrics.py  test_pipeline.py
